--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "dependencies": {
     "actionhero": "13.4.0",
     "ah-mongoose-plugin": "^0.1.2",
+    "jsonwebtoken": "^6.2.0",
+    "jwt-simple": "0.4.0",
+    "moment": "^2.13.0",
     "mongoose": "^4.4.15",
     "ws": "latest"
   },
