--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jwt-simple": "0.4.0",
     "moment": "^2.13.0",
     "mongoose": "^4.4.15",
+    "node-schedule": "^1.1.0",
     "ws": "latest"
   },
   "devDependencies": {
